--- a/GoingRogueDesign/GoingRogueDesign/Home.storyboard
+++ b/GoingRogueDesign/GoingRogueDesign/Home.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Welcome To Home Page-->
+        <!--Home-->
         <scene sceneID="OPM-yh-Jgk">
             <objects>
                 <viewController id="UMc-dp-fHJ" customClass="HomeViewController" customModule="GoingRogueDesign" customModuleProvider="target" sceneMemberID="viewController">
@@ -218,7 +218,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ch6-aH-fU9"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Welcome To Home Page" id="hOH-Do-KO8">
+                    <navigationItem key="navigationItem" title="Home" id="hOH-Do-KO8">
                         <barButtonItem key="leftBarButtonItem" style="plain" id="yvP-sc-TMn" userLabel="Logout">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="F2i-Bk-8i2">
                                 <rect key="frame" x="20" y="7" width="92" height="30"/>
